Name:                   cschneid-pretty
Version:                0.0.0
Author:                 Chris Schneider <chris@christopher-schneider.com>
Maintainer:             Chris Schneider <chris@christopher-schneider.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

Executable main
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Main-Is:              Main.hs
  Build-Depends:        base >= 4 && < 5,
                        cschneid-pretty,
                        pretty,
                        prettyclass

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Cschneid.Pretty
  Build-Depends:        base >= 4 && < 5,
                        pretty,
                        prettyclass

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec

Source-Repository head
  Type:                 git
--  Location:             
